--- a/backend/templates/video_show.html
+++ b/backend/templates/video_show.html
@@ -3,6 +3,14 @@
   <link rel="stylesheet" href="https://player.eyevinn.technology/v0.4.2/build/eyevinn-html-player.css"></link>
 </head>
 <body>
+  <div>
+    <form>
+      Channel Name : <input id='channel_name' type='text'/><br>
+      Youtube URL : <input id='youtube_url' type='text'/><br>
+      <input type='submit' onclick=onClickStreamConnect(), value='스트림 연결'>
+    </form>
+  </div>
+
   <!-- The element where the player will be placed -->
   <div id="player-wrapper"></div>
 
@@ -11,16 +19,42 @@
 
   <!-- Initiate the player and auto-play with audio muted -->
   <script>
-    
+    // set params
+    server_url = 'http://localhost:8989'
+    media_server_url = 'http://localhost:8080'
 
-    {% comment %} document.addEventListener('DOMContentLoaded', function(event) {
-      setupEyevinnPlayer('player-wrapper', '').then(function(player) {
-        var muteOnStart = true;
-        player.play(muteOnStart);
+    function startStream(stream_url) {
+      document.addEventListener('DOMContentLoaded', function(event) {
+        setupEyevinnPlayer('player-wrapper', stream_url).then(function(player) {
+          var muteOnStart = true;
+          player.play(muteOnStart);
+        });
       });
-    }); {% endcomment %}
+    }
 
-    //http://localhost:8080/hls/test/index.m3u8
+    function onClickStreamConnect() {
+      channel_name = document.getElementById('channel_name')
+      youtube_url = document.getElementById('youtube_url')
+
+      fetch(`${server_url}/stream/start`, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            channel_name: channel_name,
+            youtube_url: youtube_url
+          }
+      )}).then((res) => {
+        if (res.statuscode == 200) {
+          startStream(`${server_url}/hls/${channel_name}/index.m3u8`)
+        }
+        else {
+          console.log('Error start stream.')
+        }
+      });
+    }
+
   </script>
 </body>
 
