--- a/backend/templates/video_show.html
+++ b/backend/templates/video_show.html
@@ -7,7 +7,7 @@
     <form>
       Channel Name : <input id='channel_name' type='text'/><br>
       Youtube URL : <input id='youtube_url' type='text'/><br>
-      <input type='submit' onclick="onClickStreamConnect()", value='스트림 연결'>
+      <input type='button' onclick="onClickStreamConnect()", value='스트림 연결'>
     </form>
   </div>
 
@@ -47,8 +47,9 @@
             youtube_url: youtube_url
           }
       )}).then((res) => {
-        if (res.statuscode == 200) {
-          consolg.log('Success start stream.')
+        console.log(res.status)
+        if (res.status == 200) {
+          console.log('Success start stream.')
           startStream(`${media_server_url}/hls/${channel_name}/index.m3u8`)
         }
         else {
