--- a/backend/templates/video_show.html
+++ b/backend/templates/video_show.html
@@ -21,7 +21,7 @@
   <script>
     // set params
     server_url = 'http://localhost:8989'
-    media_server_url = 'http://media_server'
+    media_server_url = 'http://localhost:8080'
 
     function startStream(stream_url) {
       setupEyevinnPlayer('player-wrapper', stream_url).then(function(player) {
